# seo.python

./: .gitignore  README.md  input_urls.txt  pyproject.toml
src/: config_handler.py  contentscraper.py  keybert_keyword_extractor.py  main.py  nlp_keyword_extractor.py  search_console_properties_lister.py  settings.cfg
src/api/: google_api_service.py  google_oauth2.py
